--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ matrix:
         - wget https://github.com/xmake-io/xmake/releases/download/v$XMAKE_VERSION/xmake-v$XMAKE_VERSION.amd64.deb
         - sudo dpkg -i xmake-v2.2.9.amd64.deb
         - xmake create test #OK
-        - xmake f -m debug -y
+        # - xmake f -m debug -y
         - xmake
         - xmake run
         - xmake create -l c++ -t qt.quickapp test #create qt-based quickapp
