--- a/.github/workflows/c-wf.yml
+++ b/.github/workflows/c-wf.yml
@@ -3,7 +3,7 @@ name: "c/c++ CI workflow"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   schedule:
       - cron:  '0 0 * * 0' #At 00:00 on Sunday every week
 
