--- a/.github/workflows/c-wf.yml
+++ b/.github/workflows/c-wf.yml
@@ -35,7 +35,7 @@ jobs:
     - name: "make build"
       run: make -f makec randgen      
     - name: "make run"
-      run: ./randgens      
+      run: ./randgen      
     - name: "make clean"
       run: make -f makec clean   
 
@@ -50,6 +50,6 @@ jobs:
     - name: "make build"
       run: make -f makec randgen      
     - name: "make run"
-      run: ./randgens      
+      run: ./randgen      
     - name: "make clean"
       run: make -f makec clean      
